log
Fri 09 Sep 2022 12:49:58 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b5d5607
Fri 09 Sep 2022 12:50:37 PM UTC: 
 hashmap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:3: error: implicit declaration of function ‘info_msg’ [-Werror=implicit-function-declaration]
   56 |   info_msg("inicializando la tabla...");
      |   ^~~~~~~~
hashmap.c:65:41: error: implicit declaration of function ‘_strdup’; did you mean ‘strdup’? [-Werror=implicit-function-declaration]
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                         ^~~~~~~
      |                                         strdup
hashmap.c:65:41: error: passing argument 1 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                         ^~~~~~~~~~~~~~~~~
      |                                         |
      |                                         int
hashmap.c:19:27: note: expected ‘char *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                    ~~~~~~~^~~
hashmap.c:65:59: error: passing argument 2 of ‘createPair’ makes pointer from integer without a cast [-Werror=int-conversion]
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                                           ^~~~~~~~~~~~~~~~
      |                                                           |
      |                                                           int
hashmap.c:19:40: note: expected ‘void *’ but argument is of type ‘int’
   19 | Pair * createPair( char * key,  void * value) {
      |                                 ~~~~~~~^~~~~
test.c: At top level:
test.c:8:8: error: conflicting types for ‘_strdup’
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
In file included from test.c:4:
hashmap.c:65:41: note: previous implicit declaration of ‘_strdup’ was here
   65 |     map->buckets[hashs[i]] = createPair(_strdup(words[i]),_strdup("exist"));
      |                                         ^~~~~~~
test.c:36:6: error: conflicting types for ‘info_msg’ [-Werror]
   36 | void info_msg(char* msg){
      |      ^~~~~~~~
In file included from test.c:4:
hashmap.c:56:3: note: previous implicit declaration of ‘info_msg’ was here
   56 |   info_msg("inicializando la tabla...");
      |   ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a47540
Fri 09 Sep 2022 12:59:23 PM UTC: 
 hashmap.c | 19 +++++++------------
 1 file changed, 7 insertions(+), 12 deletions(-)
 tests:  1|5
total_score: 10/70
e5d6b71
Fri 09 Sep 2022 01:01:10 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
6b9af14
Fri 09 Sep 2022 01:15:49 PM UTC: 
 hashmap.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
f60fe42
Fri 09 Sep 2022 01:26:02 PM UTC: 
 hashmap.c | 24 +++++++++++++++++++++---
 1 file changed, 21 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:3: error: ‘cont’ undeclared (first use in this function)
   98 |   cont++;
      |   ^~~~
hashmap.c:98:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
61a2883
Fri 09 Sep 2022 01:26:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:109:11: error: ‘cont’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  109 |       cont++;
      |       ~~~~^~
cc1: all warnings being treated as errors
Compilation failed
e2f546b
Fri 09 Sep 2022 01:26:39 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 30/70
813c6dc
Fri 09 Sep 2022 01:27:12 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
1e3bbb0
Fri 09 Sep 2022 01:28:35 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
0a21918
Fri 09 Sep 2022 01:29:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9ad40b8
Fri 09 Sep 2022 01:29:42 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7359049
Fri 09 Sep 2022 01:30:55 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
0549761
Fri 09 Sep 2022 01:31:17 PM UTC: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|0
abfb1e1
Sun 11 Sep 2022 05:55:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
07852c2
Sun 11 Sep 2022 05:55:55 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9424b98
Sun 11 Sep 2022 06:53:31 PM UTC: 
 hashmap.c | 35 ++++++++++++++++++++++++++++++++---
 1 file changed, 32 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:128:13: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘buckeys’; did you mean ‘buckets’?
  128 |     if(map->buckeys[i]->key == NULL)
      |             ^~~~~~~
      |             buckets
Compilation failed
dc38409
Sun 11 Sep 2022 06:53:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
894e0b7
Sun 11 Sep 2022 06:54:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
73757a5
Sun 11 Sep 2022 06:55:29 PM UTC: 
 hashmap.c | 31 ++++++-------------------------
 1 file changed, 6 insertions(+), 25 deletions(-)
 tests:  8|3
total_score: 40/70
dfb09b6
Sun 11 Sep 2022 06:55:52 PM UTC: 
 hashmap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  8|3
total_score: 40/70
fcc6124
Sun 11 Sep 2022 07:01:02 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
11189ad
Sun 11 Sep 2022 07:01:19 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
a6aca1d
Sun 11 Sep 2022 07:08:44 PM UTC: 
 hashmap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:140:16: error: comparison between pointer and integer [-Werror]
  140 |   if(map->size == NULL)
      |                ^~
hashmap.c:144:20: error: comparison between pointer and integer [-Werror]
  144 |   if(map->capacity == NULL)
      |                    ^~
cc1: all warnings being treated as errors
Compilation failed
7a96a1d
Sun 11 Sep 2022 07:09:09 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|2
total_score: 50/70
3b0850a
Sun 11 Sep 2022 07:10:54 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e8c91f4
Sun 11 Sep 2022 07:11:11 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
600a23c
